[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/play_music_area2D.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Fade In Out"
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_audio_stream_playing"
}, {
"args": [ true ],
"method": "set_audio_stream_playing"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[node name="PlayMusicArea2D" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="SoundAnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade In Out" = SubResource( 1 )
"anims/Fade Sound In" = SubResource( 2 )
"anims/Fade Sound Out" = SubResource( 3 )

[node name="ExitPointArea2D" type="Area2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_PlayMusicArea2D_body_entered"]
[connection signal="body_exited" from="ExitPointArea2D" to="." method="_on_ExitPointArea2D_body_exited"]
